# aegistrack

./: .env  .gitignore  AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  INTERVIEW_PITCH.md  LICENSE  Makefile  PLANS.md  README.md  TRIAGE.md  docker-compose.yml  flake.nix
.github/workflows/: ci.yml  sanitizers.yml
apps/api/: .env.example  Dockerfile  aegistrack_mission_control.db  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial_mission_control.py
apps/api/app/: __init__.py  main.py
apps/api/app/api/v1/: router.py
apps/api/app/api/v1/routes/: __init__.py  assets.py  events.py  health.py  playback.py  sensors.py  telemetry.py  tracks.py
apps/api/app/core/: config.py  database.py
apps/api/app/db/: models.py
apps/api/app/schemas/: assets.py  common.py  events.py  health.py  playback.py  telemetry.py
apps/api/app/scripts/: seed_db.py
apps/api/app/services/: file_bridge.py  mission_control.py  seed.py  telemetry_stream.py
apps/api/app/tests/: conftest.py  test_assets.py  test_events.py  test_health.py
apps/web/: .env.example  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
apps/web/public/replays/: sample-mission.jsonl
apps/web/scripts/: copy-cesium-assets.mjs
apps/web/src/app/: globals.css  layout.tsx
apps/web/src/app/assets/: page.tsx
apps/web/src/app/globe/: page.tsx
apps/web/src/app/timeline/: page.tsx
apps/web/src/components/: alert-feed.tsx  app-shell.tsx  connection-indicator.tsx  entity-details-panel.tsx  globe-viewer.tsx  layer-toggle-panel.tsx  metric-card.tsx  playback-controls.tsx  replay-foundation-status.tsx  side-nav.tsx  status-badge.tsx  telemetry-panel.tsx  timeline-chart.tsx  top-bar.tsx
apps/web/src/components/replay/: replay-bt-panel.tsx  replay-event-feed.tsx  replay-metrics-strip.tsx  replay-mission-view.tsx  replay-tactical-canvas.tsx  replay-timeline-controls.tsx
apps/web/src/features/assets/: assets-view.tsx
apps/web/src/features/dashboard/: dashboard-view.tsx
apps/web/src/features/globe/: globe-view.tsx
apps/web/src/features/settings/: settings-view.tsx
apps/web/src/features/timeline/: timeline-view.tsx
apps/web/src/hooks/: use-mission-control-data.ts  use-telemetry-socket.ts
apps/web/src/lib/: api.ts  providers.tsx  types.ts  utils.ts
apps/web/src/lib/replay/: normalizers.ts  parser.test.ts  parser.ts  selectors.test.ts  selectors.ts  types.ts
apps/web/src/lib/replay/fixtures/: sample-mission.ts
apps/web/src/store/: replay-store.ts  ui-store.ts
apps/web/src/tests/: README.md
config/: demo_nn_vs_hungarian.json  demo_radar_eoir.json  demo_radar_only.json
deploy/: Dockerfile  docker-compose.yml
docs/images/: README.md
proto/: common.proto  detections.proto  health.proto  telemetry.proto
results/: README.md
scripts/: verify_project.sh
src/agents/interceptor/: interceptor.cpp  interceptor.h  interceptor_manager.cpp  interceptor_manager.h
src/common/: allocation_tracker.h  angles.h  covariance_checks.cpp  covariance_checks.h  fixed_rate_loop.cpp  fixed_rate_loop.h  ids.h  math_checks.cpp  math_checks.h  rng.h  tick_profiler.cpp  tick_profiler.h  time.cpp  time.h
src/decision/: action.h  assignment.cpp  assignment.h  blackboard.cpp  blackboard.h  condition.h  decision_engine.cpp  decision_engine.h  engagement_scoring.h  mission_behavior_tree.cpp  mission_behavior_tree.h  node.h  selector.h  sequence.h  threat_scoring.cpp  threat_scoring.h
src/faults/: fault_injector.h
src/fusion_core/: ekf_cv.cpp  ekf_cv.h  gating.cpp  gating.h  measurement_buffer.cpp  measurement_buffer.h  track.cpp  track.h  track_manager.cpp  track_manager.h
src/fusion_core/association/: hungarian.cpp  hungarian.h
src/messages/: types.h
src/observability/: incident_capture.cpp  incident_capture.h  jsonl_logger.cpp  jsonl_logger.h  metrics.cpp  metrics.h  metrics_csv.cpp  metrics_csv.h
src/scenario/: truth_generator.cpp  truth_generator.h
src/sensors/eoir/: eoir_sensor.cpp  eoir_sensor.h
src/sensors/radar/: radar_sensor.cpp  radar_sensor.h
src/services/sensor_node/: main.cpp
src/services/telemetry_ingest/: conversion.cpp  conversion.h  ingest_pipeline.cpp  ingest_pipeline.h  main.cpp  telemetry_ingest_service.cpp  telemetry_ingest_service.h
src/tools/: bench_harness.cpp  bench_harness.h  incident_replay.cpp  incident_replay.h  run_bench.cpp  run_cluster_demo.cpp  run_incident_replay.cpp  run_load_test.cpp  run_profile.cpp  run_replay.cpp  run_sim.cpp  sim_config.cpp  sim_config.h
src/transport/: message_bus.cpp  message_bus.h
src/viz/: visualizer.cpp  visualizer.h
tests/: test_assignment.cpp  test_behavior_tree.cpp  test_bench_smoke.cpp  test_blackboard.cpp  test_common.cpp  test_conversion.cpp  test_covariance_sanity.cpp  test_ekf_cv.cpp  test_ekf_skips_bad_measurement.cpp  test_eoir_sensor.cpp  test_eoir_update.cpp  test_gating_numerical_robustness.cpp  test_health_stale.cpp  test_hungarian.cpp  test_hungarian_association.cpp  test_incident_replay.cpp  test_ingest_queue.cpp  test_interceptor.cpp  test_interceptor_manager.cpp  test_joseph_update_symmetry.cpp  test_measurement_buffer.cpp  test_messages_and_bus.cpp  test_metrics_csv.cpp  test_mission_behavior_tree.cpp  test_proto_roundtrip.cpp  test_radar_sensor.cpp  test_realtime_reserves.cpp  test_replay_determinism.cpp  test_sanity.cpp  test_scenario.cpp  test_tick_profiler.cpp  test_track_manager.cpp  test_viz_build.cpp
